fixed spacing for results set

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -238,7 +238,7 @@
 }
 */
 .skills-container .row {
-	margin-top: 40px;	
+	margin-top: 10px;	
 }
 
 .skills-container h4 {
